# property-pulse

./: README.md  pyproject.toml  requirements.txt
data/cleaned/: redfin_hollywood_hills_cleaned.csv  redfin_hollywood_hills_cleaned_2025-08-20.csv  redfin_hollywood_hills_cleaned_2025-08-21.csv  redfin_hollywood_hills_master_cleaned.csv
data/raw/: redfin_hollywood_hills.csv  redfin_hollywood_hills_2025-08-20.csv  redfin_hollywood_hills_2025-08-21.csv  redfin_hollywood_hills_master.csv
notebooks/: Redfin_EDA.ipynb  Redfin_Scraper.ipynb  Redfin_Scraping_Experiment.ipynb
src/: cleanser.py  dashboard.py  scheduler.py  scraper.py
