[project]
name = "property-pulse"
version = "0.1.0"
description = ""
authors = [
    {name = "Amedu Stephen",email = "amedustephen@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "selenium (>=4.35.0,<5.0.0)",
    "webdriver-manager (>=4.0.2,<5.0.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "numpy (>=2.3.2,<3.0.0)",
    "matplotlib (>=3.10.5,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "streamlit (>=1.48.1,<2.0.0)",
    "folium (>=0.20.0,<0.21.0)",
    "streamlit-folium (>=0.25.1,<0.26.0)",
    "apscheduler (>=3.11.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
